# clearrisk-lab

./: .env.example  .gitignore  LICENSE  README.md  ccp_waterfall_simulation.ipynb  pyproject.toml  requirements-dev.txt  requirements.txt
app/: streamlit_app.py
docs/: architecture.md  interview_guide.md  margin_procyclicality.md  model_assumptions.md  risk_methodology.md  roadmap.md  tail_risk_experiments.md
examples/: assessment_contagion_config.yaml  baseline_config.yaml  cover2_config.yaml  expected_shortfall_config.yaml  fat_tail_config.yaml  gaussian_var_config.yaml  liquidity_closeout_config.yaml  recruiter_demo_stress_config.yaml  stressed_var_config.yaml  wrong_way_risk_config.yaml
notebooks/: 01_quickstart_ccp_waterfall.ipynb  02_tail_risk_and_margin_procyclicality_lab.ipynb  03_cover2_and_liquidity_stress_lab.ipynb
notebooks/legacy/: ccp_waterfall_simulation_original.ipynb
src/clearrisk/: __init__.py  analytics.py  cli.py  config.py  contagion.py  default_fund.py  margin.py  market.py  members.py  reporting.py  scenarios.py  stress.py  waterfall.py
src/clearrisk/agent/: __init__.py  prompts.py  risk_memo.py
src/clearrisk_lab.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_analytics.py  test_cli_compare_report.py  test_cover2.py  test_invariants.py  test_liquidity_contagion.py  test_margin.py  test_procyclicality.py  test_reporting_summary.py  test_scenarios.py  test_simulation_integration.py  test_waterfall.py
