[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "clearrisk-lab"
version = "0.1.0"
description = "Educational CCP stress-testing lab focused on margin procyclicality, tail risk, and default waterfall resilience."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Ajay Narayan Muttukumaran" }
]
dependencies = [
  "numpy",
  "pandas",
  "matplotlib",
  "scipy",
  "typer>=0.12",
  "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.4",
  "black>=24.0",
  "streamlit>=1.35",
]

[project.scripts]
clearrisk = "clearrisk.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100

